@@ -6,6 +6,7 @@ version 0.7.0 - XX-Feb-2009
  . Atlas: updateAltasValues renamed to updateAtlasValues (issue #198)
  . CocosLive: added client and example that uses the CocosLive service (issue #175)
  . CocosNode: children is a property (issue #185)
+ . CocosNode: rotate before scale (issue #217)
  . Demos: Creating Window and attaching cocos2d to it (issue #180)
  . Demos: Texture2dDemo shows how to load PVR images and PVR Mipmap images (issue #112)
  . Demos: Added AttachDemo (issue #180)
